--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "main": "RasPi_GPIO.js",
     "dependencies": {
         "async": "0.9.0",
+        "express": "4.x",
         "lodash": "~2.4.1"
     },
     "devDependencies": {
