--- a/package.json
+++ b/package.json
@@ -1,47 +1,52 @@
 {
-    "author": "James Booth <jeboothjr@gmail.com>",
-    "name": "RasPi_GPIO",
-    "description": "A node.js-based GPIO library for Raspberry Pi.",
-    "version": "0.1.0",
-    "private": true,
-    "homepage": "https://github.com/JEBoothjr/RasPi_GPIO",
-    "main": "./RasPi_GPIO.js",
-    "repository": {
-        "type": "git",
-        "url": "git@github.com:JEBoothjr/RasPi_GPIO.git"
-    },
-    "bugs": {
-        "url": "https://github.com/JEBoothjr/RasPi_GPIO/issues"
-    },
-    "keywords": [
-        "gpio",
-        "raspberry",
-        "raspi",
-        "rpi",
-        "pi",
-        "gpio-admin"
-    ],
-    "dependencies": {
-        "async": "0.9.0",
-        "lodash": "~2.4.1"
-    },
-    "license": "MIT",
-    "engines": {
-        "node": ">=0.10.0"
-    },
-    "devDependencies": {
-        "del": "1.1.1",
-        "express": "4.x",
-        "gulp": "3.x",
-        "gulp-istanbul": "0.2.x",
-        "gulp-istanbul-enforcer": "1.0.x",
-        "gulp-jshint": "1.8.x",
-        "gulp-mocha": "1.0.x",
-        "jshint": "2.5.x",
-        "jshint-stylish": "0.4.x",
-        "mkdirp": "0.5.0",
-        "run-sequence": "1.0.1",
-        "should": "4.0.*",
-        "sinon": "1.10.3"
-    }
+  "author": "James Booth <jeboothjr@gmail.com>",
+  "name": "RasPi_GPIO",
+  "description": "A node.js-based GPIO library for Raspberry Pi.",
+  "version": "0.1.1",
+  "homepage": "https://github.com/JEBoothjr/RasPi_GPIO",
+  "main": "./RasPi_GPIO.js",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:JEBoothjr/RasPi_GPIO.git"
+  },
+  "bugs": {
+    "url": "https://github.com/JEBoothjr/RasPi_GPIO/issues"
+  },
+  "keywords": [
+    "gpio",
+    "raspberry",
+    "raspi",
+    "rpi",
+    "pi",
+    "gpio-admin"
+  ],
+  "dependencies": {
+    "async": "0.9.0",
+    "lodash": "~2.4.1"
+  },
+  "license": "MIT",
+  "engines": {
+    "node": ">=0.10.0"
+  },
+  "devDependencies": {
+    "del": "1.1.1",
+    "express": "4.x",
+    "gulp": "3.x",
+    "gulp-istanbul": "0.2.x",
+    "gulp-istanbul-enforcer": "1.0.x",
+    "gulp-jshint": "1.8.x",
+    "gulp-mocha": "1.0.x",
+    "jshint": "2.5.x",
+    "jshint-stylish": "0.4.x",
+    "mkdirp": "0.5.0",
+    "run-sequence": "1.0.1",
+    "should": "4.0.*",
+    "sinon": "1.10.3"
+  },
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "gulp test"
+  }
 }
