--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "James Booth <jeboothjr@gmail.com>",
-  "name": "RasPi_GPIO",
+  "name": "raspi_gpio",
   "description": "A node.js-based GPIO library for Raspberry Pi.",
   "version": "0.1.1",
   "homepage": "https://github.com/JEBoothjr/RasPi_GPIO",
