--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "author": "James Booth <jeboothjr@gmail.com>",
-  "name": "raspi_gpio",
+  "name": "raspi-gpio",
   "description": "A node.js-based GPIO library for Raspberry Pi.",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "homepage": "https://github.com/JEBoothjr/RasPi_GPIO",
   "main": "./RasPi_GPIO.js",
   "repository": {
